[package]
name = "avent"
license = "MIT"
description = "An async event system based on tokio broadcast"
homepage = "https://github.com/s10db/avent"
repository = "https://github.com/s10db/avent"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
